--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,11 @@
 {
   "manifest_version": 2,
-  "name": "Tinder catfish",
+  "name": "TinderCatfish",
   "version": "0.1",
   "description": "Commenting and leaving reviews on tinder profiles",
   "icons": {
     "128": "imgs/logo.png"
   },
-  "permissions": [
-    "activeTab"
-  ],
   "browser_action": {
         "default_icon": "imgs/logo.png"
   },
